--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_ZOOMBA_API_END_POINT=http://api.dev.zoomba.ng
+REACT_APP_ZOOMBA_API_END_POINT=http://api.zoomba.ng
 BUILD_PATH=../seller.zoomba.ng
